--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div id="app">
     <h1>My Profile</h1>
-    <a href="/src/demo1/hyperlinks.html">DEMO 1</a>
+    <a href="src/demo1/hyperlinks.html">DEMO 1</a>
   </div>
   <script type="module" src="/main.js"></script>
 </body>
