add aboutMe page

--- a/src/demo1/linkpage/aboutMe.html
+++ b/src/demo1/linkpage/aboutMe.html
@@ -10,8 +10,106 @@
 </head>
 
 <body>
-  hello world
-  <a href="../hyperlinks.html">home</a>
+  <div class="background"></div>
+  <main>
+    <header>
+      <a href="../hyperlinks.html">
+        <img src="headphoto.png" alt="headphoto">
+      </a>
+      <div>
+        <ul>
+          <li>
+            <span class="mySpan">FULL STACK ENGINEER</span>
+          </li>
+          <li>
+            <span class="mySpan">EMBEDDED SYSTEM ENGINEER</span>
+          </li>
+          <li>
+            <span class="mySpan">PROGRAM ANALYSIS RESEARCHER</span>
+          </li>
+          <li>
+            <span class="mySpan">BADMINTON PLAYER</span>
+          </li>
+          <li>
+            <span class="mySpan">TEACHER & STUDENT</span>
+          </li>
+
+        </ul>
+      </div>
+    </header>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime odio numquam mollitia aspernatur ullam
+      temporibus, nisi maiores quibusdam porro, saepe recusandae illum doloremque ducimus eius suscipit iure repudiandae
+      quam esse. Omnis, dolores pariatur qui veritatis debitis iste quia officia repudiandae suscipit eaque fuga
+      perspiciatis saepe repellendus, ut velit. Necessitatibus modi, asperiores aut praesentium adipisci maxime nam
+      dolores odio amet ducimus aliquid quidem in. Voluptas porro, blanditiis maxime cumque nesciunt incidunt quis
+      perspiciatis inventore magni tempore? Adipisci exercitationem asperiores itaque debitis expedita aperiam amet vero
+      fuga quam dolorem impedit ipsum velit cum fugiat perspiciatis error totam beatae ea pariatur, quisquam illo
+      tenetur. In blanditiis earum temporibus modi exercitationem ad impedit neque repudiandae! Ullam ad cupiditate
+      blanditiis odit eaque, facere rerum iste dolorem quia ipsa quibusdam veniam nihil, exercitationem soluta ratione
+      voluptatum aut rem ipsum, placeat perferendis et inventore distinctio error. Architecto voluptate natus ipsa
+      doloremque deserunt. Voluptatem esse nisi harum autem, perferendis voluptates veniam incidunt nobis id nesciunt
+      exercitationem alias architecto accusantium, eius quam rerum placeat magnam odit illo temporibus? Cum ad molestias
+      libero aspernatur, dignissimos iure nisi consequuntur dicta necessitatibus magnam possimus quae odio porro! Et
+      fugit nesciunt, numquam neque consequatur quia illum nobis commodi veniam temporibus provident dolorem molestiae?
+    </p>
+    <br>
+    <table>
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Year</th>
+          <th>Organization</th>
+          <th>Position</th>
+          <th>Achievement</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="table-blue">
+          <th scope="row">1</th>
+          <td>2013</td>
+          <td>Newcastle University</td>
+          <td>Wireless Embedded System</td>
+          <td>Master Degree</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>2013</td>
+          <td>Newcastle University</td>
+          <td>Wireless Embedded System</td>
+          <td>Master Degree</td>
+        </tr>
+        <tr class="table-blue">
+          <th scope="row">3</th>
+          <td>2013</td>
+          <td class="td-red" rowspan="2">Newcastle University</td>
+          <td>Wireless Embedded System</td>
+          <td>Master Degree</td>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+          <td>2013</td>
+          <td class="td-orange" colspan="2">Wireless Embedded System</td>
+        </tr>
+        <tr class="table-blue">
+          <th scope="row">5</th>
+          <td>2013</td>
+          <td>Newcastle University</td>
+          <td>Wireless Embedded System</td>
+          <td>Master Degree</td>
+        </tr>
+      </tbody>
+      <tfoot></tfoot>
+    </table>
+    <br>
+    <a href="./headphoto.png">Full Page Show</a>
+    <a href="./headphoto.png" download>Full Page Show</a>
+    <br>
+    <a href="/src/demo1/hyperlinks.html">Back to Home Page</a>
+    <a href="../hyperlinks.html">Back to Home Page</a>
+  </main>
+
+
 </body>
 
 </html>
