--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <div id="app">
     <h1>My Profile</h1>
     <a href="src/demo1/hyperlinks.html">DEMO 1</a>
+    <a href="https://ephemeral-salmiakki-1b4974.netlify.app">DEMO 2 - Card Demo</a>
+    <a href="https://github.com/topcoderguan/first_project_demo">Demo 2 - Card Demo - Source Code</a>
   </div>
   <script type="module" src="/main.js"></script>
 </body>
